// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`plugins/inlineChunk > should add InlineChunkHtmlPlugin properly by default 1`] = `
{
  "entry": {
    "main": [
      "src/main.ts",
    ],
  },
  "plugins": [
    HtmlWebpackPlugin {
      "userOptions": {
        "chunks": [
          "main",
        ],
        "filename": "html/main/index.html",
        "inject": "head",
        "minify": {
          "collapseWhitespace": true,
          "keepClosingSlash": true,
          "minifyCSS": true,
          "minifyJS": {
            "format": {
              "ascii_only": true,
            },
            "mangle": {
              "safari10": true,
            },
          },
          "minifyURLs": true,
          "removeComments": false,
          "removeEmptyAttributes": true,
          "removeRedundantAttributes": true,
          "removeScriptTypeAttributes": true,
          "removeStyleLinkTypeAttributes": true,
          "useShortDoctype": true,
        },
        "scriptLoading": "defer",
        "template": "<WORKSPACE>/packages/builder/builder-shared/static/template.html",
        "templateParameters": [Function],
      },
      "version": 5,
    },
    InlineChunkHtmlPlugin {
      "distPath": {
        "css": "static/css",
        "js": "static/js",
      },
      "htmlPlugin": [Function],
      "inlinedAssets": Set {},
      "name": "InlineChunkHtmlPlugin",
      "scriptTests": [
        /builder-runtime\\(\\[\\.\\]\\.\\+\\)\\?\\\\\\.js\\$/,
      ],
      "styleTests": [],
    },
  ],
}
`;

exports[`plugins/inlineChunk > should use proper plugin options when disableInlineRuntimeChunk is true 1`] = `
{
  "entry": {
    "main": [
      "src/main.ts",
    ],
  },
  "plugins": [
    HtmlWebpackPlugin {
      "userOptions": {
        "chunks": [
          "main",
        ],
        "filename": "html/main/index.html",
        "inject": "head",
        "minify": {
          "collapseWhitespace": true,
          "keepClosingSlash": true,
          "minifyCSS": true,
          "minifyJS": {
            "format": {
              "ascii_only": true,
            },
            "mangle": {
              "safari10": true,
            },
          },
          "minifyURLs": true,
          "removeComments": false,
          "removeEmptyAttributes": true,
          "removeRedundantAttributes": true,
          "removeScriptTypeAttributes": true,
          "removeStyleLinkTypeAttributes": true,
          "useShortDoctype": true,
        },
        "scriptLoading": "defer",
        "template": "<WORKSPACE>/packages/builder/builder-shared/static/template.html",
        "templateParameters": [Function],
      },
      "version": 5,
    },
    InlineChunkHtmlPlugin {
      "distPath": {
        "css": "static/css",
        "js": "static/js",
      },
      "htmlPlugin": [Function],
      "inlinedAssets": Set {},
      "name": "InlineChunkHtmlPlugin",
      "scriptTests": [],
      "styleTests": [],
    },
  ],
}
`;

exports[`plugins/inlineChunk > should use proper plugin options when enableInlineScripts is true 1`] = `
{
  "entry": {
    "main": [
      "src/main.ts",
    ],
  },
  "plugins": [
    HtmlWebpackPlugin {
      "userOptions": {
        "chunks": [
          "main",
        ],
        "filename": "html/main/index.html",
        "inject": "head",
        "minify": {
          "collapseWhitespace": true,
          "keepClosingSlash": true,
          "minifyCSS": true,
          "minifyJS": {
            "format": {
              "ascii_only": true,
            },
            "mangle": {
              "safari10": true,
            },
          },
          "minifyURLs": true,
          "removeComments": false,
          "removeEmptyAttributes": true,
          "removeRedundantAttributes": true,
          "removeScriptTypeAttributes": true,
          "removeStyleLinkTypeAttributes": true,
          "useShortDoctype": true,
        },
        "scriptLoading": "defer",
        "template": "<WORKSPACE>/packages/builder/builder-shared/static/template.html",
        "templateParameters": [Function],
      },
      "version": 5,
    },
    InlineChunkHtmlPlugin {
      "distPath": {
        "css": "static/css",
        "js": "static/js",
      },
      "htmlPlugin": [Function],
      "inlinedAssets": Set {},
      "name": "InlineChunkHtmlPlugin",
      "scriptTests": [
        /\\\\\\.\\(js\\|mjs\\|cjs\\|jsx\\)\\$/,
        /builder-runtime\\(\\[\\.\\]\\.\\+\\)\\?\\\\\\.js\\$/,
      ],
      "styleTests": [],
    },
  ],
}
`;

exports[`plugins/inlineChunk > should use proper plugin options when enableInlineStyles is true 1`] = `
{
  "entry": {
    "main": [
      "src/main.ts",
    ],
  },
  "plugins": [
    HtmlWebpackPlugin {
      "userOptions": {
        "chunks": [
          "main",
        ],
        "filename": "html/main/index.html",
        "inject": "head",
        "minify": {
          "collapseWhitespace": true,
          "keepClosingSlash": true,
          "minifyCSS": true,
          "minifyJS": {
            "format": {
              "ascii_only": true,
            },
            "mangle": {
              "safari10": true,
            },
          },
          "minifyURLs": true,
          "removeComments": false,
          "removeEmptyAttributes": true,
          "removeRedundantAttributes": true,
          "removeScriptTypeAttributes": true,
          "removeStyleLinkTypeAttributes": true,
          "useShortDoctype": true,
        },
        "scriptLoading": "defer",
        "template": "<WORKSPACE>/packages/builder/builder-shared/static/template.html",
        "templateParameters": [Function],
      },
      "version": 5,
    },
    InlineChunkHtmlPlugin {
      "distPath": {
        "css": "static/css",
        "js": "static/js",
      },
      "htmlPlugin": [Function],
      "inlinedAssets": Set {},
      "name": "InlineChunkHtmlPlugin",
      "scriptTests": [
        /builder-runtime\\(\\[\\.\\]\\.\\+\\)\\?\\\\\\.js\\$/,
      ],
      "styleTests": [
        /\\\\\\.css\\$/,
      ],
    },
  ],
}
`;
